k8s/dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: express-mobile-ui-dev
  labels:
    name: express-mobile-ui-dev
    environment: development
