k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: express-mobile-ui
  labels:
    name: express-mobile-ui
    environment: production
    app: express-mobile-checkin
